7400: remove GT experiment
Also refactored PointOfSale to make it more testable and cleaner